Advent day 8 complete. That was fun!

--- a/README.org
+++ b/README.org
@@ -25,4 +25,8 @@ This time, wrote a parser and a class.  But that part was quick, done by before 
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2018-12-06 Thu 23:34]
 :END:
-** TODO Day 8
+** DONE Day 8
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2018-12-08 Sat 10:46]
+:END:
+** TODO Day 9
